# phentax

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: Makefile  api.rst  conf.py  index.rst  license.rst  requirements.txt  tutorial.ipynb
docs/api/: phentax.ansatze.rst  phentax.core.amplitude.rst  phentax.core.pn_coeffs.rst  phentax.rst  phentax.utils.config.rst  phentax.utils.rst
docs/docs/api/: modules.rst  phentax.core.collocation.rst  phentax.core.fits.rst  phentax.core.internals.rst  phentax.core.phase.rst  phentax.core.rst  phentax.utils.coarse_graining.rst  phentax.utils.conditioning.rst  phentax.utils.constants.rst  phentax.utils.utility.rst  phentax.utils.ylm.rst  phentax.waveform.rst
examples/: gradient_tutorial.ipynb  tutorial.ipynb
src/phentax/: __init__.py  amplitude.py  ansatze.py  collocation.py  config.py  constants.py  fits.py  internals.py  phase.py  pn_coeffs.py  utils.py  waveform.py
src/phentax/core/: __init__.py  amplitude.py  collocation.py  fits.py  internals.py  phase.py  pn_coeffs.py
src/phentax/utils/: __init__.py  coarse_graining.py  conditioning.py  config.py  constants.py  utility.py  ylm.py
tests/: test_amp_phase.py  test_amplitude_coeffs_comparison.py  test_ansatze_comparison.py  test_collocation_comparison.py  test_imr_amplitude_dot.py  test_phase_coeffs_comparison.py  test_phenomxpy_comparison.py  test_phentax.py  test_pn_coeffs_comparison.py  test_waveform.py
