[project]
name = "phentax"
version = "0.1.0"
description = "JAX Implementation of the IMRPhenomT(HM) waveform family"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "diffrax>=0.7.0",
    "interpax>=0.3.12",
    "jax>=0.8.1",
    "matplotlib>=3.10.8",
    "phenomxpy>=0.1.1",
    "pytest>=9.0.2",
    "scienceplots>=2.2.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]

